Add styles to login page

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,9 @@
 // Colors
-
+$dark-gray: #333;
+$blue: #1c88bf;
+//Font Size 
+$font-size-large: 1.8rem;
+$font-size-xlarge: 2.2rem;
 // Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
