--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,9 +3,11 @@ html{
 }
 
 body{
+    color: $dark-gray;
     font-family: Helvetica,  Arial, sans-serif;
-    font-size: $l-size;
+    font-size: $font-size-large;
     background-color: gray;
+    line-height: 1.6;
 }
 
 button {
