Add Header styles

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,6 +1,10 @@
 // Colors
+$light: #eee;
 $dark-gray: #333;
 $blue: #1c88bf;
+$dark-blue: #364051;
+$orange: #DF4225;
+$green: #4CAF50;
 //Font Size 
 $font-size-large: 1.8rem;
 $font-size-xlarge: 2.2rem;
