Add styles to summary component

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -3,7 +3,10 @@ $light: #eee;
 $dark-gray: #333;
 $blue: #1c88bf;
 $dark-blue: #364051;
+$main-theme: #364051;
 $orange: #DF4225;
+$button-bg: #1c88bf;
+$button-bg-hover: #4CAF50;
 $green: #4CAF50;
 //Font Size 
 $font-size-large: 1.8rem;
