--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,26 +1,18 @@
 .button{
     margin: 0 0;
-    background-color: $orange;
+    background-color: $button-bg;
     color: $light;
     border: none;
     border-radius: 3px;
     padding: $m-size;
     font-size: $font-size-large;
     font-weight: 300;
+    display: inline-block;
+    text-decoration: none;
 
     transition: background-color 0.3s;
 }
 
-.button:hover{
-    background-color:$green;
+.button--link{
+    background: transparent;
 }
-
-.button__logout{
-    background-color: none;
-    transition: color 0.3s;
-}
-.button__logout:hover{
-    color: $dark-gray;
-    background-color: $orange;
-}
-
