Add app styles ang loader image

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,6 @@
 // Colors
-$light: #eee;
+$light: #f7f7f7;
+$light-hover: #e6e6e6;
 $dark-gray: #333;
 $blue: #1c88bf;
 $dark-blue: #364051;
@@ -8,7 +9,9 @@ $orange: #DF4225;
 $button-bg: #1c88bf;
 $button-bg-hover: #4CAF50;
 $green: #4CAF50;
+$gray: #666;
 //Font Size 
+$font-size-small: 1.4rem;
 $font-size-large: 1.8rem;
 $font-size-xlarge: 2.2rem;
 // Spacing
