--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 html{
     font-size: 62.5%;
 }
@@ -6,7 +9,7 @@ body{
     color: $dark-gray;
     font-family: Helvetica,  Arial, sans-serif;
     font-size: $font-size-large;
-    background-color: gray;
+    background-color: $light;
     line-height: 1.6;
 }
 
