--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,4 +5,10 @@
 @import './components/header';
 @import './components/content-container';
 @import './components/page-header';
+@import './components/input-group';
+@import './components/inputs';
+@import './components/form';
+@import './components/visibility';
+@import './components/list';
+@import './components/loader';
 
